Restore target URL base path preservation lost in rc merge
Re-apply direct URL construction via ApiModeConfig so configured host
paths like mycompany.com/gitlab are preserved, and fix CI compile failure
from the removed URIBuilder import.

Co-authored-by: Cursor <cursoragent@cursor.com>